# hn-randfile-rust

./: Cargo.toml  README.md
src/: cli.rs  generator.rs  main.rs  random.rs
