[package]
name = "hn-randfile"
version = "0.2.1"
edition = "2024"
description = "A random file generator tool"
license = "MIT"
repository = "https://github.com/hnchengzong/hn-randfile-rust"
authors = ["hnchengzong"]

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive", "color"] }
rand = { version = "0.10.0", features = ["std"] }
rand_distr = { version = "0.6.0" }
